--- a/src/spa/shared/cards/stackCard/stackCard.module.less
+++ b/src/spa/shared/cards/stackCard/stackCard.module.less
@@ -1,8 +1,15 @@
+@import "~styles/_colors";
 @import "~styles/_shadows";
 
 .div {
-  background: #F17D00;
+  background: @white;
+  border-radius: 1rem;
   box-shadow: @cardBoxShadow;
   height: 5rem;
+  margin-right: 2rem;
   width: 5rem;
+}
+
+.img {
+  width: 100%;
 }
