--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -14,14 +14,6 @@
   width: 45%;
 }
 
-.section {
-  flex: auto;
-  height: 10rem;
-  margin-left: @pageMarginLeft;
-  overflow: auto;
-  padding-right: @pageMarginLeft;
-}
-
 .paragraphDiv {
   width: 45%;
 }
@@ -37,6 +29,19 @@
   height: 100%;
   margin-top: 4rem;
   width: 100%;
+}
+
+.section {
+  flex: auto;
+  height: 10rem;
+  margin-left: @pageMarginLeft;
+  overflow: auto;
+  padding-right: @pageMarginLeft;
+}
+
+.stackCardsDiv {
+  display: flex;
+  margin: 1rem 0 1rem 2rem;
 }
 
 .stackSection {
