--- a/src/spa/shared/cards/stackCard/stackCard.module.less
+++ b/src/spa/shared/cards/stackCard/stackCard.module.less
@@ -2,14 +2,17 @@
 @import "~styles/_shadows";
 
 .div {
+  align-items: center;
   background: @white;
   border-radius: 1rem;
   box-shadow: @cardBoxShadow;
+  display: flex;
   height: 5rem;
+  justify-content: center;
   margin-right: 2rem;
   width: 5rem;
 }
 
 .img {
-  width: 100%;
+  width: 75%;
 }
