udpating styling of stack cards

--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -39,8 +39,9 @@
   padding-right: @pageMarginLeft;
 }
 
-.stackCardsDiv {
+.stackCardsContainer {
   display: flex;
+  flex-wrap: wrap;
   margin: 1rem 0 1rem 2rem;
 }
 
