--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -12,6 +12,8 @@
 @cardMargin: 1rem;
 @cardTotalHeight: calc(@cardContentHeight + @cardDescriptionHeight + @cardMargin * 2);
 @cardWidth: 15rem;
+@stackCardSize: 7rem;
+@stackCardBorderRadius: 1rem;
 
 // ----- FORMS ----- //
 
@@ -48,6 +50,7 @@
   headerHeight: @headerHeight;
   headerMarginTop: @headerMarginTop;
   navWidth: @navWidth;
+  stackCardSize: @stackCardSize;
 }
 /* stylelint-enable */
 
