--- a/src/spa/shared/cards/stackCard/stackCard.module.less
+++ b/src/spa/shared/cards/stackCard/stackCard.module.less
@@ -11,6 +11,7 @@
   height: @stackCardSize;
   justify-content: center;
   margin: 0 3rem 3rem 0;
+  overflow: hidden;
   position: relative;
   width: @stackCardSize;
 }
