updating stack card background color

--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -12,11 +12,12 @@
 
 // ----- TRANSPARENT GREYSCALE ----- //
 
+@transparentBlackQuarterOpacity: #565E5F40; // 25% opacity
 @transparentBlack: #565E5fA6; // 65% opacity
+@transparentBlackThreeQuarterOpacity: #565E5FBF; // 75% opacity
 @transparentBlackDarker: #565E5fD9; // 85% opacity
-@transparentBlackQuarterOpacity: #565E5F40;
-@transparentWhiteHalfOpacity: #FFFFFF80;
-@transparentWhiteThreeQuarterOpacity: #FFFFFFBF;
+@transparentWhiteHalfOpacity: #FFFFFF80; // 25% opacity
+@transparentWhiteThreeQuarterOpacity: #FFFFFFBF; // 75% opacity
 
 // ----- COLORS ----- //
 
@@ -34,8 +35,8 @@
 
 // ----- TRANSPARENT COLORS ----- //
 
-@blueThreeQuarterOpacity: #00A6EDBF;
-@yellowHalfOpacity: #FCC90080;
+@blueThreeQuarterOpacity: #00A6EDBF; // 75% opacity
+@yellowHalfOpacity: #FCC90080; // 50% opacity
 
 // ----- EXPORTED COLORS ----- //
 
