--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -16,6 +16,7 @@
 @transparentBlack: #565E5fA6; // 65% opacity
 @transparentBlackThreeQuarterOpacity: #565E5FBF; // 75% opacity
 @transparentBlackDarker: #565E5fD9; // 85% opacity
+@transparentBlackDarkest: #565E5FE6; // 90% opacity
 @transparentWhiteHalfOpacity: #FFFFFF80; // 25% opacity
 @transparentWhiteThreeQuarterOpacity: #FFFFFFBF; // 75% opacity
 
