changing stack card container to anchor and adding links

--- a/src/spa/shared/cards/stackCard/stackCard.module.less
+++ b/src/spa/shared/cards/stackCard/stackCard.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_shadows";
 @import "~styles/_sizes";
 
-.stackCardDiv {
+.stackCardAnchor {
   align-items: center;
   background: @white;
   border-radius: @standardBorderRadius;
