updating stack card titles

--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -12,6 +12,7 @@
 @cardMargin: 1rem;
 @cardTotalHeight: calc(@cardContentHeight + @cardDescriptionHeight + @cardMargin * 2);
 @cardWidth: 15rem;
+@stackCardMargin: 3rem;
 @stackCardSize: 7rem;
 @stackCardBorderRadius: 1rem;
 
