--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -48,3 +48,11 @@
 .stackSection {
   margin-top: @sectionMargin;
 }
+
+.stackTitleDiv {
+  margin-bottom: 1rem;
+}
+
+.typographyDiv {
+  margin-bottom: @stackCardMargin;
+}
