--- a/src/spa/shared/cards/stackCard/stackCard.module.less
+++ b/src/spa/shared/cards/stackCard/stackCard.module.less
@@ -10,7 +10,7 @@
   display: flex;
   height: @stackCardSize;
   justify-content: center;
-  margin: 0 3rem 3rem 0;
+  margin: 0 @stackCardMargin @stackCardMargin 0;
   overflow: hidden;
   position: relative;
   width: @stackCardSize;
