--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -12,30 +12,51 @@
 
 .black {
   color: @black;
+  > p > a {
+    color: @orange;
+  }
 }
 
 .blue {
   color: @blue;
+  > p > a {
+    color: @orange;
+  }
 }
 
 .lightGrey {
   color: @lightGrey;
+  > p > a {
+    color: @orange;
+  }
 }
 
 .orange {
   color: @orange;
+  > p > a {
+    color: @blue;
+  }
 }
 
 .red {
   color: @red;
+  > p > a {
+    color: @blue;
+  }
 }
 
 .transparentWhite {
   color: @transparentWhiteThreeQuarterOpacity;
+  > p > a {
+    color: @white;
+  }
 }
 
 .white {
   color: @white;
+  > p > a {
+    color: @white;
+  }
 }
 
 // ----- FONTS ----- //
