adding about dev stack

--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -1,10 +1,8 @@
 @import "~styles/_sizes";
 
-@sectionMargin: 5rem;
-
 :global {
   #p-2 {
-    margin-top: @sectionMargin;
+    margin-top: 5rem;
   }
 }
 
@@ -37,22 +35,4 @@
   margin-left: @pageMarginLeft;
   overflow: auto;
   padding-right: @pageMarginLeft;
-}
-
-.stackCardsContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 1rem 0 1rem 2rem;
-}
-
-.stackSection {
-  margin-top: @sectionMargin;
-}
-
-.stackTitleDiv {
-  margin-bottom: 1rem;
-}
-
-.typographyDiv {
-  margin-bottom: @stackCardMargin;
 }
