updating about dev page styling

--- a/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
@@ -6,15 +6,21 @@
 
 .img {
   border-radius: 2rem;
-  height: 45%;
-  width: 45%;
+  height: 30%;
+  min-width: 16rem;
+  width: 30%;
 }
 
 .paragraphDiv {
-  width: 45%;
+  align-items: center;
+  display: flex;
+  max-width: 40rem;
+  width: 60%;
 }
 
 .paragraphSection {
+  align-items: center;
   display: flex;
+  margin: 0 7rem;
   justify-content: space-between;
 }
