--- a/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevPage.module.less
@@ -11,7 +11,6 @@
 .section {
   flex: auto;
   height: 10rem;
-  margin-left: @pageMarginLeft;
   overflow: auto;
-  padding-right: @pageMarginLeft;
+  padding-top: 4rem;
 }
