--- a/src/spa/app/pages/aboutDevPage/aboutDevStack/aboutDevStack.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevStack/aboutDevStack.module.less
@@ -7,7 +7,9 @@
 }
 
 .stackSection {
+  margin-left: @pageMarginLeft;
   margin-top: 5rem;
+  padding-right: @pageMarginLeft;
 }
 
 .stackTitleDiv {
