updating about dev page styling

--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -42,6 +42,7 @@
 
 @dashboardPagePaddingLeft: 1rem;
 @pageMarginLeft: calc(@cardMargin + @dashboardPagePaddingLeft);
+@aboutDevPageMargin: 7rem;
 
 // ----- SIZE EXPORTS ----- //
 
