--- a/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
@@ -1,3 +1,5 @@
+@import "~styles/_sizes";
+
 :global {
   #p-2 {
     margin-top: 5rem;
@@ -7,20 +9,28 @@
 .img {
   border-radius: 2rem;
   height: 30%;
+  max-width: 25rem;
   min-width: 16rem;
   width: 30%;
+}
+
+.imgLeft {
+  margin-right: 2rem;
+}
+
+.imgRight {
+  margin-left: 2rem;
 }
 
 .paragraphDiv {
   align-items: center;
   display: flex;
-  max-width: 40rem;
-  width: 60%;
+  width: 65%;
 }
 
 .paragraphSection {
   align-items: center;
   display: flex;
-  margin: 0 7rem;
+  margin: 0 @aboutDevPageMargin;
   justify-content: space-between;
 }
