adding third paragraph

--- a/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
@@ -1,11 +1,5 @@
 @import "~styles/_sizes";
 
-:global {
-  #p-2 {
-    margin-top: 5rem;
-  }
-}
-
 .img {
   border-radius: 2rem;
   height: 30%;
@@ -26,6 +20,14 @@
   align-items: center;
   display: flex;
   width: 65%;
+}
+
+.paragraphDivNoImg {
+  width: 100% !important;
+}
+
+.paragraphMargin {
+  margin-top: 5rem !important;
 }
 
 .paragraphSection {
