adding line height prop to typgrography and increasing line height for about dev description

--- a/src/spa/shared/typography/typographyText/typographyText.module.less
+++ b/src/spa/shared/typography/typographyText/typographyText.module.less
@@ -22,6 +22,12 @@
   white-space: break-spaces;
 }
 
+// ----- LINE HEIGHT ----- //
+
+.large {
+  line-height: 3rem;
+}
+
 // ----- ELLIPSIS DOT SIZES ----- //
 
 /* stylelint-disable unit-blacklist, unit-whitelist */
