--- a/src/spa/app/layout/navigation/navigationButtons/navigationButtons.module.less
+++ b/src/spa/app/layout/navigation/navigationButtons/navigationButtons.module.less
@@ -1,3 +1,6 @@
+// *1: for some reason the navigation buttons aren't appearing completely in the center, so I have
+// to add this margin to fix it
+
 @import "~styles/_sizes";
 
 .parentSection {
@@ -11,5 +14,6 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem; // *1
   position: relative;
 }
