--- a/src/styles/_boxes.less
+++ b/src/styles/_boxes.less
@@ -8,3 +8,12 @@
   box-shadow: @landingFormBoxShadow;
   position: absolute;
 }
+
+.aboutPageBox {
+  .landingBox;
+  height: 80%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+}
