adding conditional overflow to layout

--- a/src/spa/landing/layout/layout.module.less
+++ b/src/spa/landing/layout/layout.module.less
@@ -1,10 +1,17 @@
+.hidePages {
+  overflow: initial;
+}
+
 .main {
   height: 100%;
-  overflow: auto;
   width: 100%;
 }
 
 .section {
   background: #7DCC93;
   height: 100vh;
+}
+
+.showPages {
+  overflow: auto;
 }
