adding header to landing page layout

--- a/src/spa/landing/layout/layout.module.less
+++ b/src/spa/landing/layout/layout.module.less
@@ -1,3 +1,5 @@
+@import "~styles/_sizes";
+
 .hidePages {
   overflow: initial;
 }
@@ -5,6 +7,10 @@
 .main {
   height: 100%;
   width: 100%;
+}
+
+.pageHeader {
+  margin: 3rem 0 3rem calc(@aboutDevPageMargin - @pageMarginLeft);
 }
 
 .section {
