--- a/src/spa/app/pages/aboutPage/aboutDescription/aboutDescription.module.less
+++ b/src/spa/app/pages/aboutPage/aboutDescription/aboutDescription.module.less
@@ -1,11 +1,15 @@
 @import "~styles/_sizes";
 
 .img {
-  border-radius: 2rem;
+  border-radius: 1rem;
   height: 30%;
-  max-width: 25rem;
+  max-width: 20rem;
   min-width: 16rem;
   width: 30%;
+}
+
+.imgBookshelf {
+  max-width: 25rem;
 }
 
 .imgLeft {
@@ -19,7 +23,7 @@
 .paragraphDiv {
   align-items: center;
   display: flex;
-  width: 65%;
+  width: 70%;
 }
 
 .paragraphDivNoImg {
@@ -27,7 +31,15 @@
 }
 
 .paragraphMargin {
-  margin-top: 5rem !important;
+  margin-top: 7rem !important;
+}
+
+.paragraphMarginThree {
+  margin-top: 3rem !important;
+}
+
+.paragraphMarginTwo {
+  margin-top: 2rem !important;
 }
 
 .paragraphSection {
