--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -1,6 +1,18 @@
 @import "~styles/_colors";
 
+.footerContent {
+  display: flex;
+}
+
 .section {
   background: @black;
-  height: 10rem;
+  height: 25rem;
+}
+
+.ul {
+  list-style: none;
+  padding: 0;
+  > li {
+    margin: 0.5rem 0;
+  }
 }
