--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -2,6 +2,15 @@
 
 .footerContent {
   display: flex;
+  margin-top: 2rem;
+}
+
+.iconDiv {
+  margin-right: 0.5rem;
+}
+
+.list {
+  margin: 0 2rem;
 }
 
 .section {
