--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -7,6 +7,12 @@
   margin-top: @marginTop;
 }
 
+.hr {
+  border-color: @white;
+  border-width: 0 0 0.0625rem 0;
+  width: 100%;
+}
+
 .iconDiv {
   margin-right: 0.5rem;
 }
@@ -23,10 +29,11 @@
 }
 
 .section {
+  align-items: center;
   background: @black;
   display: flex;
+  flex-direction: column;
   height: 25rem;
-  justify-content: center;
   position: relative;
 }
 
