--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -2,6 +2,14 @@
 
 @marginTop: 2rem;
 
+.copyrightContent {
+  margin-top: 0.625rem;
+}
+
+.copyrightDiv {
+  margin: 0.125rem 0.5rem 0 0;
+}
+
 .footerContent {
   display: flex;
   margin-top: @marginTop;
@@ -10,6 +18,7 @@
 .hr {
   border-color: @white;
   border-width: 0 0 0.0625rem 0;
+  margin-top: 1rem;
 }
 
 .iconDiv {
