--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -16,6 +16,10 @@
 @stackCardSize: 7rem;
 @stackCardBorderRadius: 1rem;
 
+// ----- FOOTER ----- //
+
+@footerMarginTop: 2rem;
+
 // ----- FORMS ----- //
 
 // login form
