--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -19,6 +19,7 @@
 // ----- FOOTER ----- //
 
 @footerMarginTop: 2rem;
+@footerListMargin: 3rem;
 
 // ----- FORMS ----- //
 
@@ -53,6 +54,7 @@
 /* stylelint-disable */
 :export {
   caretSize: @caretSize;
+  footerListMargin: @footerListMargin;
   headerHeight: @headerHeight;
   headerMarginTop: @headerMarginTop;
   navWidth: @navWidth;
