--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -16,8 +16,8 @@
 }
 
 .logo {
-  height: 5rem;
-  width: 5rem;
+  height: @footerLogoSize;
+  width: @footerLogoSize;
   position: absolute;
   top: @footerMarginTop;
 }
