--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -20,6 +20,7 @@
 
 @footerMarginTop: 2rem;
 @footerListMargin: 3rem;
+@footerLogoSize: 5rem;
 
 // ----- FORMS ----- //
 
@@ -55,6 +56,7 @@
 :export {
   caretSize: @caretSize;
   footerListMargin: @footerListMargin;
+  footerLogoSize: @footerLogoSize;
   headerHeight: @headerHeight;
   headerMarginTop: @headerMarginTop;
   navWidth: @navWidth;
