--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .copyrightContent {
-  margin-top: 1rem;
+  margin: 1rem 0 2rem 0;
 }
 
 .copyrightDiv {
@@ -27,7 +27,6 @@
   background: @black;
   display: flex;
   flex-direction: column;
-  height: 25rem;
   position: relative;
 }
 
