--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -10,9 +10,13 @@
 }
 
 .hr {
-  border-color: @white;
+  border-color: @black;
   border-width: 0 0 0.0625rem 0;
   margin-top: 1rem;
+}
+
+.landingBackground {
+  background: @black;
 }
 
 .logo {
@@ -24,7 +28,6 @@
 
 .section {
   align-items: center;
-  background: @black;
   display: flex;
   flex-direction: column;
   position: relative;
