--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -1,18 +1,24 @@
 @import "~styles/_colors";
 @import "~styles/_sizes";
 
-.copyrightContent {
+.copyrightContentApp {
+  margin: 1rem 0 4rem 0;
+}
+
+.copyrightContentLanding {
   margin: 1rem 0 2rem 0;
 }
 
-.hr {
+.hrApp {
   border-color: @black;
   border-width: 0 0 0.0625rem 0;
   margin-top: 1rem;
 }
 
-.landingBackground {
-  background: @black;
+.hrLanding {
+  border-color: @white;
+  border-width: 0 0 0.0625rem 0;
+  margin-top: 1rem;
 }
 
 .logo {
@@ -22,8 +28,17 @@
   top: @footerMarginTop;
 }
 
-.section {
+.sectionApp {
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 4rem;
+  position: relative;
+}
+
+.sectionLanding {
+  align-items: center;
+  background: @black;
   display: flex;
   flex-direction: column;
   position: relative;
