--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -5,6 +5,7 @@
 // ----- OVERALL STYLING ----- //
 
 .typography {
+  display: flex;
   margin: 0;
 }
 
@@ -155,3 +156,6 @@
   .buttonAndLinkMixin;
 }
 
+.whiteButtonLink {
+  color: @white;
+}
