--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -16,6 +16,12 @@
 @stackCardSize: 7rem;
 @stackCardBorderRadius: 1rem;
 
+// ----- FOOTER ----- //
+
+@footerMarginTop: 2rem;
+@footerListMargin: 3rem;
+@footerLogoSize: 5rem;
+
 // ----- FORMS ----- //
 
 // login form
@@ -49,6 +55,8 @@
 /* stylelint-disable */
 :export {
   caretSize: @caretSize;
+  footerListMargin: @footerListMargin;
+  footerLogoSize: @footerLogoSize;
   headerHeight: @headerHeight;
   headerMarginTop: @headerMarginTop;
   navWidth: @navWidth;
