--- a/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
+++ b/src/spa/app/pages/aboutDevPage/aboutDevDescription/aboutDevDescription.module.less
@@ -33,6 +33,6 @@
 .paragraphSection {
   align-items: center;
   display: flex;
-  margin: 0 @aboutDevPageMargin;
+  margin: 0 @aboutPageMargin;
   justify-content: space-between;
 }
