--- a/src/spa/shared/about/aboutForUsers/aboutForUsers.module.less
+++ b/src/spa/shared/about/aboutForUsers/aboutForUsers.module.less
@@ -23,7 +23,7 @@
 .paragraphDiv {
   align-items: center;
   display: flex;
-  width: 70%;
+  width: 75%;
 }
 
 .paragraphDivNoImg {
@@ -45,6 +45,6 @@
 .paragraphSection {
   align-items: center;
   display: flex;
-  margin: 0 @aboutDevPageMargin;
+  margin: 0 @aboutPageMargin;
   justify-content: space-between;
 }
