--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -48,7 +48,7 @@
 
 @dashboardPagePaddingLeft: 1rem;
 @pageMarginLeft: calc(@cardMargin + @dashboardPagePaddingLeft);
-@aboutDevPageMargin: 7rem;
+@aboutPageMargin: 7rem;
 
 // ----- SIZE EXPORTS ----- //
 
