--- a/src/spa/shared/footer/footer.module.less
+++ b/src/spa/shared/footer/footer.module.less
@@ -28,7 +28,7 @@
   top: @footerMarginTop;
 }
 
-.sectionApp {
+.section {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -37,10 +37,6 @@
 }
 
 .sectionLanding {
-  align-items: center;
   background: @black;
-  display: flex;
-  flex-direction: column;
-  position: relative;
 }
 
