--- a/src/spa/shared/modals/modal/modal.module.less
+++ b/src/spa/shared/modals/modal/modal.module.less
@@ -9,6 +9,7 @@
   box-shadow: @cardBoxShadow;
   display: flex;
   left: 50%;
+  padding: 0.5rem;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
