--- a/src/spa/shared/modals/modal/modal.module.less
+++ b/src/spa/shared/modals/modal/modal.module.less
@@ -3,15 +3,27 @@
 @import "~styles/_sizes";
 @import "~styles/_zIndices";
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.375rem;
+}
+
 .section {
   background: @white;
   border-radius: @standardBorderRadius;
   box-shadow: @cardBoxShadow;
   display: flex;
+  flex-direction: column;
   left: 50%;
   padding: 0.5rem;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: @zModal;
+}
+
+.closeDiv, .typographyDiv {
+  align-items: center;
+  display: flex;
 }
