--- a/src/spa/shared/modals/addCardModal/addCardModal.module.less
+++ b/src/spa/shared/modals/addCardModal/addCardModal.module.less
@@ -1,19 +1,13 @@
 .formDiv {
-  background: #FCC900; // todo: remove
-  height: 100%; // todo: remove
-  width: 40%; // todo: remove
+  width: 50%;
 }
 
 .parentDiv {
-  background: #28C2FA; // todo: remove
   display: flex;
-  height: 40rem; // todo: remove
   justify-content: space-between;
-  width: 50rem; // todo: remove
+  width: 35rem;
 }
 
 .previewDiv {
-  background: #F17D00; // todo: remove
-  height: 100%; // todo: remove
-  width: 40%; // todo: remove
+  width: 40%;
 }
