--- a/src/spa/shared/inputs/dropdown/dropdown.less
+++ b/src/spa/shared/inputs/dropdown/dropdown.less
@@ -26,3 +26,13 @@
     color: @blue;
   }
 }
+
+.ant-select-open {
+  .ant-select-selection:hover {
+    border-color: @blueHover;
+  }
+}
+
+.ant-select-selection:hover {
+  border-color: @antBorderColor;
+}
