--- a/src/styles/_shadows.less
+++ b/src/styles/_shadows.less
@@ -1,5 +1,7 @@
 @import "~styles/_colors";
 
+@antInputShadow: 0 0 0 2px rgba(0, 166, 237, 0.2);
+
 @cardBoxShadow: 0 1px 2px rgba(0,0,0,0.07),
   0 2px 4px rgba(0,0,0,0.07),
   0 4px 8px rgba(0,0,0,0.07),
