updating border for card when in preview mode

--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -17,6 +17,11 @@
   width: @cardWidth;
 }
 
+.containerPreview {
+  border: 0.0625rem solid @transparentBlackThreeQuarterOpacity;
+  box-shadow: none !important;
+}
+
 .selectedContainer {
   box-shadow: @cardBoxShadowSelected;
   transition: box-shadow 0.1s ease;
