updating add card modal styling

--- a/src/spa/shared/modals/addCardModal/addCardModal.module.less
+++ b/src/spa/shared/modals/addCardModal/addCardModal.module.less
@@ -1,13 +1,20 @@
 .formDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   width: 50%;
 }
 
 .parentDiv {
   display: flex;
   justify-content: space-between;
+  margin-top: 1rem;
   width: 35rem;
 }
 
 .previewDiv {
   width: 40%;
+  > div {
+    margin: 0;
+  }
 }
