--- a/src/spa/shared/cards/card/cardContent/cardContent.module.less
+++ b/src/spa/shared/cards/card/cardContent/cardContent.module.less
@@ -1,10 +1,10 @@
 @import "~styles/_sizes";
 
 .container {
-  height: @cardContentHeight;
-  width: @cardWidth;
   display: flex;
+  height: 100%;
   position: relative;
+  width: @cardWidth;
   &:hover {
     :global {
       .card-menu-button, .card-youtube-play-button, .like-button {
