--- a/src/spa/shared/cards/card/cardDescription/cardDescription.module.less
+++ b/src/spa/shared/cards/card/cardDescription/cardDescription.module.less
@@ -1,6 +1,6 @@
 @import "~styles/_sizes";
 
 .div {
-  height: @cardDescriptionHeight;
+  height: @youtubeCardDescriptionHeight;
   margin: @cardMargin;
 }
