--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -19,8 +19,9 @@
 // youtube card sizes
 @youtubeCardContentHeight: 8.4375rem;
 @youtubeCardDescriptionHeight: calc(
-  @cardTotalHeight - (@youtubeCardContentHeight + @cardMargin * 2)
+  @cardTotalHeight - (@youtubeCardContentHeight + @youtubeCardDescriptionMargin * 2)
 );
+@youtubeCardDescriptionMargin: 0.75rem;
 
 // ----- FOOTER ----- //
 
