--- a/src/spa/shared/cards/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
+++ b/src/spa/shared/cards/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
@@ -18,8 +18,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: @youtubeCardDescriptionHeight;
   justify-content: space-between;
+  margin: @youtubeCardDescriptionMargin;
 }
 
 .statsContainer {
