--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -15,6 +15,13 @@
   position: relative;
   transition: box-shadow 0.1s ease;
   width: @cardWidth;
+  &:hover {
+    :global {
+      .card-menu-button, .card-like-button {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 .containerPreview {
