--- a/src/spa/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
+++ b/src/spa/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
@@ -1,5 +1,18 @@
 @import "~styles/_colors";
+@import "~styles/_sizes";
 @import "~styles/_transitions";
+
+.container {
+  height: @youtubeCardContentHeight;
+  position: relative;
+  &:hover {
+    :global {
+      .card-youtube-play-button {
+        opacity: 1;
+      }
+    }
+  }
+}
 
 .durationDiv {
   background: @transparentBlack;
