--- a/src/spa/shared/cards/youtubeCard/youtubePlayer/youtubePlayer.module.less
+++ b/src/spa/shared/cards/youtubeCard/youtubePlayer/youtubePlayer.module.less
@@ -1,10 +1,8 @@
-@import "~styles/_sizes";
-
 .div {
   height: 100%;
   width: 100%;
 }
 
 .parentDiv {
-  height: @youtubeCardContentHeight;
+  height: 100%;
 }
