--- a/src/spa/shared/cards/imageCard/imageCardThumbnail/imageCardThumbnail.module.less
+++ b/src/spa/shared/cards/imageCard/imageCardThumbnail/imageCardThumbnail.module.less
@@ -1,4 +1,7 @@
 .img {
   object-fit: contain;
-  width: 100%;
+  position: absolute;
+  //top: 50%;
+  //transform: translateY(-50%);
+  //width: 100%;
 }
