--- a/src/spa/shared/cards/imageCard/imageCardThumbnail/imageCardThumbnail.module.less
+++ b/src/spa/shared/cards/imageCard/imageCardThumbnail/imageCardThumbnail.module.less
@@ -1,7 +1,7 @@
+@import "~styles/_sizes";
+
 .img {
+  height: 100%;
+  max-width: @cardWidth;
   object-fit: contain;
-  position: absolute;
-  //top: 50%;
-  //transform: translateY(-50%);
-  //width: 100%;
 }
