--- a/src/spa/shared/cards/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
+++ b/src/spa/shared/cards/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
@@ -18,9 +18,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: @youtubeCardDescriptionHeight;
+  height: 100%;
   justify-content: space-between;
-  margin: @youtubeCardDescriptionMargin;
 }
 
 .statsContainer {
