--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -6,22 +6,15 @@
 // ----- CARDS ----- //
 
 // general card sizes
+@cardContentHeight: 8.4375rem;
+@cardDescriptionHeight: 6.5rem;
 @cardInnerMargin: 0.75rem;
 @cardMargin: 1rem;
-@cardTotalHeight: 17rem;
+@cardTotalHeight: calc(@cardContentHeight + @cardDescriptionHeight + @cardMargin * 2);
 @cardWidth: 15rem;
-
-// stack card sizes
-@stackCardBorderRadius: 1rem;
 @stackCardMargin: 3rem;
 @stackCardSize: 7rem;
-
-// youtube card sizes
-@youtubeCardContentHeight: 8.4375rem;
-@youtubeCardDescriptionHeight: calc(
-  @cardTotalHeight - (@youtubeCardContentHeight + @youtubeCardDescriptionMargin * 2)
-);
-@youtubeCardDescriptionMargin: 0.75rem;
+@stackCardBorderRadius: 1rem;
 
 // ----- FOOTER ----- //
 
