--- a/src/spa/shared/cards/card/card.module.less
+++ b/src/spa/shared/cards/card/card.module.less
@@ -10,6 +10,7 @@
   flex-direction: column;
   height: @cardTotalHeight;
   margin: @cardMargin;
+  min-width: @cardWidth;
   overflow: hidden;
   position: relative;
   transition: box-shadow 0.1s ease;
