Create image card (#119)
* updating

* updating

* updating

* updating

* updating

* updating

* updating

--- a/src/spa/shared/cards/card/cardContent/cardContent.module.less
+++ b/src/spa/shared/cards/card/cardContent/cardContent.module.less
@@ -4,6 +4,7 @@
   height: @cardContentHeight;
   width: @cardWidth;
   display: flex;
+  justify-content: center;
   position: relative;
   &:hover {
     :global {
