--- a/src/spa/shared/forms/form/form.module.less
+++ b/src/spa/shared/forms/form/form.module.less
@@ -1,11 +1,19 @@
 @import '~styles/_sizes';
 
+.horizontal {
+  :global {
+    .ant-form-item {
+      margin-bottom: @formItemMarginBottom;
+    }
+  }
+}
+
 .login {
   padding: 1.25rem @formHorizontalPadding !important;
   width: 20rem;
 }
 
-.verticalLayout {
+.vertical {
   :global {
     .ant-form-item-with-help {
       margin-bottom: calc(@formItemMarginBottom + 0.5rem);
