Updating how a form item's error message get's displayed so that it does not move the form item in horizontal formats (#121)
* udpating form layout api

* updating

* udpating

--- a/src/spa/shared/forms/form/form.module.less
+++ b/src/spa/shared/forms/form/form.module.less
@@ -1,6 +1,23 @@
 @import '~styles/_sizes';
 
+.horizontal {
+  :global {
+    .ant-form-item {
+      margin-bottom: @formItemMarginBottom;
+    }
+  }
+}
+
 .login {
   padding: 1.25rem @formHorizontalPadding !important;
   width: 20rem;
+}
+
+.vertical {
+  :global {
+    .ant-form-item-with-help {
+      margin-bottom: calc(@formItemMarginBottom + 0.5rem);
+      transition: 0.3s margin-bottom ease;
+    }
+  }
 }
