--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -62,8 +62,10 @@
 
 // ----- DISABLED ----- //
 
-.isDisabled {
-  color: #E41245;
+.disabled {
+  color: @lightGrey !important;
+  cursor: not-allowed !important;
+  pointer-events: none;
 }
 
 // ----- FONTS ----- //
