Disabling Image Card Description buttons when in preview mode (#128)
* updating pm

* updating

* updating

--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -60,6 +60,14 @@
   }
 }
 
+// ----- DISABLED ----- //
+
+.disabled {
+  color: @lightGrey !important;
+  cursor: not-allowed !important;
+  pointer-events: none;
+}
+
 // ----- FONTS ----- //
 
 .poppins {
