--- a/src/spa/shared/buttons/button/button.module.less
+++ b/src/spa/shared/buttons/button/button.module.less
@@ -22,8 +22,8 @@
   color: @blue;
   font-family: @poppins;
   &:hover {
-    border-color: @darkerBlue !important;
-    color: @darkerBlue !important;
+    border-color: @darkBlue !important;
+    color: @darkBlue !important;
   }
 }
 
@@ -34,6 +34,6 @@
   font-family: @poppins;
   &:hover {
     border-color: transparent !important;
-    color: @darkerBlue !important;
+    color: @darkBlue !important;
   }
 }
