--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -23,10 +23,9 @@
 
 // ----- COLORS ----- //
 
-@blue: #00A6ED;
-@blueHover: #28C2FA;
-@darkBlue: #0096DB;
-@darkerBlue: #0081C3;
+@blue: #1F9EFF;
+@blueHover: #5CB8FF;
+@darkBlue: #007FE0;
 @brown: #E19470;
 @green: #7DCC93;
 @navy: #21354B;
