--- a/src/spa/app/pages/userSettingsPage/userSettingsPage.module.less
+++ b/src/spa/app/pages/userSettingsPage/userSettingsPage.module.less
@@ -1,4 +1,9 @@
-.div {
+@import "~styles/_sizes";
+
+.section {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  margin-left: @pageMarginLeft;
+  width: 100%;
 }
