--- a/src/spa/shared/forms/formItem/formItem.module.less
+++ b/src/spa/shared/forms/formItem/formItem.module.less
@@ -1,3 +1,19 @@
+@import "~styles/_sizes";
+
+.horizontal {
+  display: flex;
+  > div:first-of-type {
+    align-items: center;
+    display: flex;
+    margin: 0 1rem @formItemMarginBottom 0;
+  }
+}
+
 .typographyDiv {
   line-height: initial;
 }
+
+.vertical {
+  // Leaving empty for future css needs
+}
+
