--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -24,14 +24,18 @@
 // ----- COLORS ----- //
 
 @blue: #00A6ED;
-@blueHover: #5CB8FF;
-@darkBlue: #007FE0;
+@blueHover: #1FBCFF;
+@darkBlue: #008FCC;
+
+@lightRed: #EE2F5F;
+@red: #E41245;
+@darkRed: #BD0F3B;
+
 @brown: #E19470;
 @green: #7DCC93;
 @navy: #21354B;
 @orange: #F17D00;
 @purple: #31355A;
-@red: #E41245;
 @yellow: #FCC900;
 
 // ----- TRANSPARENT COLORS ----- //
