changing alias name from blueHover to lightBlue

--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -23,8 +23,8 @@
 
 // ----- COLORS ----- //
 
+@lightBlue: #1FBCFF;
 @blue: #00A6ED;
-@blueHover: #1FBCFF;
 @darkBlue: #008FCC;
 
 @lightRed: #EE2F5F;
