--- a/src/spa/shared/inputs/dropdown/dropdown.less
+++ b/src/spa/shared/inputs/dropdown/dropdown.less
@@ -45,7 +45,7 @@
     box-shadow: @antInputShadow !important;
   }
   .ant-select-selection:hover {
-    border-color: @blueHover !important;
+    border-color: @lightBlue !important;
   }
 }
 
