--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -144,7 +144,7 @@
   display: flex;
   text-decoration: none;
   &:hover {
-    color: @blueHover;
+    color: @lightBlue;
   }
   svg {
     margin-right: 0.375rem;
