adding red input

--- a/src/spa/shared/inputs/dropdown/dropdown.less
+++ b/src/spa/shared/inputs/dropdown/dropdown.less
@@ -42,7 +42,7 @@
 .ant-select-open {
   .ant-select-selection {
     border-color: @blue !important;
-    box-shadow: @antInputShadow !important;
+    box-shadow: @antInputBlueShadow !important;
   }
   .ant-select-selection:hover {
     border-color: @lightBlue !important;
