--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -43,6 +43,10 @@
 @blueThreeQuarterOpacity: #00A6EDBF; // 75% opacity
 @yellowHalfOpacity: #FCC90080; // 50% opacity
 
+// 20% opacities are used for ant design box shadows (e.g. text input box shadows)
+@blueTwentyPercentOpacity: #00A6ED33;
+@redTwentyPercentOpacity: #E4124533;
+
 // ----- EXPORTED COLORS ----- //
 
 /* stylelint-disable */
