--- a/src/styles/_shadows.less
+++ b/src/styles/_shadows.less
@@ -1,6 +1,7 @@
 @import "~styles/_colors";
 
-@antInputShadow: 0 0 0 2px rgba(0, 166, 237, 0.2);
+@antInputBlueShadow: 0 0 0 2px @blueTwentyPercentOpacity;
+@antInputRedShadow: 0 0 0 2px @redTwentyPercentOpacity;
 
 @cardBoxShadow: 0 1px 2px rgba(0,0,0,0.07),
   0 2px 4px rgba(0,0,0,0.07),
