--- a/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderFilterForm/userDashboardPageHeaderFiltersContent/userDashboardPageHeaderFiltersContent.module.less
+++ b/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderFilterForm/userDashboardPageHeaderFiltersContent/userDashboardPageHeaderFiltersContent.module.less
@@ -1,3 +1,11 @@
+.dropdownLi {
+  :global {
+    .ant-select {
+      width: 7rem;
+    }
+  }
+}
+
 .li {
   margin: 0.75rem;
 }
@@ -6,4 +14,5 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 15rem;
 }
