--- a/src/spa/shared/buttons/button/button.module.less
+++ b/src/spa/shared/buttons/button/button.module.less
@@ -1,11 +1,18 @@
 @import "~styles/_colors";
 @import "~styles/_fonts";
 
+// ----- DIV CONTAINER ----- //
+
+.div {
+  display: inline-block;
+}
+
 // ----- GENERAL STYLE ----- //
 
 .button {
   align-items: center;
   display: flex;
+  justify-content: center;
   > svg {
     margin-right: 0.5rem;
   }
