--- a/src/spa/shared/buttons/button/button.module.less
+++ b/src/spa/shared/buttons/button/button.module.less
@@ -4,7 +4,7 @@
 // ----- DIV CONTAINER ----- //
 
 .div {
-  display: inline-block;
+  display: flex;
 }
 
 // ----- GENERAL STYLE ----- //
@@ -37,10 +37,21 @@
   }
 }
 
+.isWaiting {
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
 // ----- BLUE BUTTON ----- //
 
 .primary-blue {
   .primary;
+  &.isWaiting {
+    &:hover {
+      background: @blue !important;
+      border-color: @blue !important;
+    }
+  }
   background: @blue !important;
   border-color: @blue;
   &:hover {
