updating multi select styling

--- a/src/spa/shared/inputs/dropdown/dropdown.less
+++ b/src/spa/shared/inputs/dropdown/dropdown.less
@@ -1,4 +1,5 @@
 @import "~antd/lib/select/style/index.less";
+@import "~antd/lib/icon/style/index.less";
 @import "~styles/_ant";
 @import "~styles/_colors";
 @import "~styles/_fonts";
