--- a/src/spa/shared/inputs/dropdown/dropdown.module.less
+++ b/src/spa/shared/inputs/dropdown/dropdown.module.less
@@ -1,3 +1,16 @@
+.dropdown {
+  :global {
+    .ant-select-selection {
+      justify-content: flex-start;
+    }
+    .ant-select-arrow {
+      position: absolute;
+      right: 0;
+      top: 0.25rem;
+    }
+  }
+}
+
 .iconDiv {
   align-items: center;
   display: flex;
