--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -2,6 +2,7 @@
 
 // ant form sizes
 @formItemMarginBottom: 0.75rem;
+@formItemMarginBottomWithHelp: calc(@formItemMarginBottom + 0.5rem);
 
 // ----- CARDS ----- //
 
