--- a/src/spa/landing/layout/loginPage/loginForm/loginFormContent/loginFormInputs/loginFormInputs.module.less
+++ b/src/spa/landing/layout/loginPage/loginForm/loginFormContent/loginFormInputs/loginFormInputs.module.less
@@ -1,3 +1,48 @@
+@import "~styles/_sizes";
+@import '~styles/_transitions';
+
+.invalidUsernameDiv {
+  :global {
+    .ant-form-item {
+      margin-bottom: 4rem;
+      transition: @formItemMarginBottomTransition;
+    }
+  }
+}
+
+.loginPasswordDiv {
+  :global {
+    .ant-form-item {
+      margin-bottom: @formItemMarginBottom;
+      transition: @formItemMarginBottomTransition;
+    }
+    .ant-form-item-with-help {
+      margin-bottom: @formItemMarginBottomWithHelp;
+    }
+  }
+}
+
+.usernameDiv {
+  :global {
+    .ant-form-item {
+      margin-bottom: @formItemMarginBottom;
+      transition: @formItemMarginBottomTransition;
+    }
+    .ant-form-item-with-help {
+      margin-bottom: @formItemMarginBottomWithHelp;
+    }
+  }
+}
+
+.weakLoginPasswordDiv {
+  :global {
+    .ant-form-item {
+      margin-bottom: 9.25rem;
+      transition: @formItemMarginBottomTransition;
+    }
+  }
+}
+
 .weakPasswordDiv {
   margin: 0 0 0.5rem 1rem;
 }
