--- a/src/styles/_transitions.less
+++ b/src/styles/_transitions.less
@@ -1,1 +1,7 @@
+// ----- CARD TRANSITIONS ----- //
+
 @cardContentOpacityTransition: opacity 0.4s ease;
+
+// ----- FORM ITEM TRANSITIONS ----- //
+
+@formItemMarginBottomTransition: 0.3s margin-bottom ease;
