--- a/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderFilters/userDashboardPageHeaderFilters.module.less
+++ b/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderFilters/userDashboardPageHeaderFilters.module.less
@@ -1,18 +1,11 @@
+.divContainer {
+  display: flex;
+}
+
 .dropdownLi {
   :global {
     .ant-select {
       width: 7rem;
     }
   }
-}
-
-.li {
-  margin: 0.75rem;
-}
-
-.ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 15rem;
 }
