--- a/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderForm.module.less
+++ b/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderForm.module.less
@@ -4,14 +4,14 @@
   margin: 0 1.5rem;
 }
 
-.buttonsContainer {
-  margin-top: 0.25rem;
-  position: relative;
-}
-
 .formContainer {
   display: flex;
+  flex-direction: column;
   margin-left: @pageMarginLeft;
+}
+
+.mainContainer {
+  display: flex;
 }
 
 .input {
