--- a/src/spa/app/layout/header/header.module.less
+++ b/src/spa/app/layout/header/header.module.less
@@ -1,7 +1,8 @@
 @import "~styles/_sizes";
 
 .header {
-  height: @headerHeight;
+  //height: @headerHeight;
+  height: 100%;
   position: relative;
   margin-top: @headerMarginTop;
 }
