--- a/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderForm.module.less
+++ b/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderForm.module.less
@@ -11,11 +11,13 @@
 }
 
 .mainContainer {
-  border: 0.16rem solid #E41245;
   display: flex;
   :global {
     .ant-form-item {
       margin-bottom: 0;
+    }
+    .ant-form-item-control {
+      line-height: initial;
     }
   }
 }
