--- a/src/spa/shared/forms/formItem/formItem.module.less
+++ b/src/spa/shared/forms/formItem/formItem.module.less
@@ -4,10 +4,14 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
+  margin-right: 1rem;
   :global {
     .ant-form-item {
       margin-bottom: 0;
     }
+  }
+  p {
+    margin-right: 0.5rem;
   }
 }
 
